cmake_minimum_required(VERSION 3.1)
PROJECT(lua)

AUX_SOURCE_DIRECTORY(./ LUA_SRC)



SET(LIBRARY_OUTPUT_PATH ./)
#SET(EXECUTABLE_OUTPUT_PATH  ./bin)

ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON)

INCLUDE_DIRECTORIES(./
        /usr/local/include/apr-1
        /usr/local/include
        ./include
        ../
        )

LINK_DIRECTORIES(./ ./slog/lib)

ADD_LIBRARY(lua STATIC
        ${LUA_SRC}
        )

#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
#ADD_LIBRARY(${PROJECTNAME} SHARED ${SRC_LIST})
#ADD_EXECUTABLE(${PROJECTNAME} ${SRC_LIST})

#TARGET_LINK_LIBRARIES(base pthread crypto)
